<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.modelgenerated</groupId>
	<artifactId>modelgenerated</artifactId>
	<version>2.0.2</version>
	<packaging>ejb</packaging>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>javax.ejb</groupId>
		    <artifactId>ejb-api</artifactId>
		    <version>3.0</version>
		</dependency>
		<dependency>
			<groupId>jug</groupId>
			<artifactId>jug</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>com.modelgenerated</groupId>
			<artifactId>mgutil</artifactId>
			<version>1.0.2</version>
		 </dependency>
		<!-- https://mvnrepository.com/artifact/net.jcip/jcip-annotations -->
		<dependency>
			<groupId>net.jcip</groupId>
			<artifactId>jcip-annotations</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.spec.javax.rmi</groupId>
			<artifactId>jboss-rmi-api_1.0_spec</artifactId>
			<version>1.0.6.Final</version>
		</dependency>

            		
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-ejb-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<ejbVersion>3.0</ejbVersion>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.modelgenerated</groupId>
				<artifactId>mgmavenplugin</artifactId>
				<version>1.0.2</version>
				<configuration>
				    <bootstrapURL>file:///${basedir}/src/main/config/bootstrap/generate</bootstrapURL>
				    <generatorRoot>${basedir}</generatorRoot>		      
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
        <repository>
        <id>local123</id>
        <name>localRepo</name>
        <url>file://${project.basedir}/libs</url>
        </repository>
     </repositories>	
	<pluginRepositories>
        <pluginRepository>
        <id>localplugin123</id>
        <name>localRepo</name>
        <url>file://${project.basedir}/libs</url>
        </pluginRepository>
     </pluginRepositories>
	
</project>